iter_language/tests/corpus/invalid/queue-servicebus-web-proxy-without-websockets.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: queue-servicebus-web-proxy-without-websockets.iter
---
Error: queue servicebus: `web_proxy` requires `transport = "amqp_websockets"`
   ╭─[queue-servicebus-web-proxy-without-websockets.iter:1:7]
   │
 1 │ queue servicebus {
   │       ─────┬────  
   │            ╰────── queue servicebus: `web_proxy` requires `transport = "amqp_websockets"`
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[queue-servicebus-web-proxy-without-websockets.iter:1:1]
   │
 1 │ queue servicebus {
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
